First round addressing PR comments